XWIKI-12046: Not existing document should not be counted in the document cache size
* minor improvements